# virtCCA_sdk

./: README.en.md  README.md  build.sh
CoDA/: virtcca_guest.patch  virtcca_guest_config.patch  virtcca_host.patch  virtcca_qemu.patch
MPC/: support-MPC-TSS.patch
attestation/full-disk-encryption/direct-boot/: README.en.md  README.md
attestation/full-disk-encryption/grub-boot/: README.en.md  README.md  README_zh.md
attestation/full-disk-encryption/grub-boot/attestation/: pre-fde.sh
attestation/full-disk-encryption/grub-boot/image/: create-fde-image.sh
attestation/full-disk-encryption/grub-boot/initramfs/: fde-agent.sh  module-setup.sh
attestation/full-disk-encryption/grub-boot/initramfs/rats-tls/: fde-agent.sh  module-setup.sh
attestation/full-disk-encryption/grub-boot/initramfs/samples/: fde-agent.sh  module-setup.sh
attestation/initramfs/: build.sh
attestation/initramfs/br2_external/: external.desc
attestation/initramfs/br2_external/board/virtcca_qemu/rootfs_overlay/: inittab  profile
attestation/initramfs/br2_external/board/virtcca_qemu/rootfs_overlay/etc/init.d/: rcA
attestation/initramfs/br2_external/configs/: virtcca_qemu_defconfig
attestation/initramfs/br2_external/package_patch/patches/busybox/: init.c.patch
attestation/rats-tls/: 0001-add-virtcca-instance.patch  0002-verify-file-hash-of-IMA-measurement.patch  0003-change-IMA-verify-after-TLS-channel-set-up.patch  0004-Support-Luks-Disk-Encryption.patch  0004-Support_FDE_And_Firmware_Verify.patch  0005-Enhance-firmware-verification-with-multi-kernel-supp.patch  0005-security-check.patch
attestation/rim_ref/: CMakeLists.txt
attestation/rim_ref/inc/: gen_rim_ref.h
attestation/rim_ref/src/: create-oe-image.sh  gen_rim_ref.c  measure_pe.c
attestation/samples/: CMakeLists.txt  README.md  build.sh
attestation/samples/include/: binary_blob.h  common.h  event_log.h  hash_defs.h  token_parse.h  token_validate.h  utils.h  vcca_event_log.h  vcca_firmware_state.h  verify.h
attestation/samples/src/: binary_blob.c  client.c  event_log.c  firmware_state.c  rem.c  server.c  token_parse.c  token_validate.c  utils.c  vcca_event_log.c  vcca_firmware_state.c  verify.c
attestation/sdk/: CMakeLists.txt
attestation/sdk/include/: attestation.h
attestation/sdk/src/: attestation.c  tsi.h
confidential_container/: 0001-adapt-for-cvm.patch  0001-support-virtiofs.patch  guest-components.patch  kata-container.patch  qemu.patch
cvm-image-rewriter/: README.en.md  README.md  create-oe-image.sh  measure_pe.c
doc/confidential_container/: kata机密容器.md  容器镜像加解密.md  容器镜像度量.md  容器镜像签名验签.md  机密容器支持Nydus.md  机密容器设备直通.md  机密容器远程证明.md  机密容器部署运行.md
doc/zh-cn/confidential_container/: 机密容器支持Nydus.md  机密容器部署运行.md
huk_derive/sdk/: CMakeLists.txt
huk_derive/sdk/inc/: huk_derive.h
huk_derive/sdk/src/: huk_derive.c
sealing_key/sdk/: CMakeLists.txt
sealing_key/sdk/inc/: sealing_key.h
sealing_key/sdk/src/: sealing_key.c
